fixed warning color in dark mode

--- a/packages/eez-studio-ui/_stylesheets/app.less
+++ b/packages/eez-studio-ui/_stylesheets/app.less
@@ -1334,7 +1334,8 @@ button.EezStudio_Action {
     padding: 5px;
 
     &.databaseCompactIsAdvisable {
-        background-color: @warningColor;
+        background-color: @warningBackgroundColor;
+        color: @warningColor;
     }
 
     & > div {
@@ -2185,7 +2186,8 @@ button.EezStudio_Action {
 }
 
 .EezStudio_HistoryItemRenderError {
-    background-color: @warningColor;
+    background-color: @warningBackgroundColor;
+    color: @warningColor;
     border-radius: 8px;
     padding: 10px;
 }
